# h-emcee

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  conf.py  index.rst  requirements.txt
docs/_static/: custom.css
docs/tutorials/: Quickstart_thing.ipynb  adaptation.ipynb  moves.ipynb  quickstart.ipynb
docs/user/: Adaptation.rst  Autocorrelation.rst  EnsembleSampler.rst  FAQ.rst  HamiltonianEnsembleSampler.rst  Installation.rst
example/: gaussian.ipynb
src/hemcee/: __init__.py  autocorr.py  dual_averaging.py  proposal.py  sampler.py  sampler_utils.py  temp.h5
src/hemcee/adaptation/: __init__.py  adapter.py  base.py  chees.py  chees_walk.py  dual_averaging.py  nuts.py  nuts_side.py  nuts_walk.py  nuts_walk_helper.py  nuts_walk_jax.py  reasonable_stepsize.py
src/hemcee/backend/: __init__.py  backend.py  hdf.py
src/hemcee/kernels/: hmc.py  hmc_side.py  hmc_walk.py  hmc_walk_dual_averaging.py  nuts_walk.py
src/hemcee/moves/: hmc_walk.py
src/hemcee/moves/hamiltonian/: hmc.py  hmc_side.py  hmc_walk.py  nuts_move.py  nuts_side.py  nuts_walk.py
src/hemcee/moves/vanilla/: side.py  stretch.py  walk.py
src/hemcee/samplers/: ensemble.py  hamiltonian.py  hamiltonian_ensemble.py  nuts_ensemble.py  sampler.py  sampler_utils.py
src/hemcee/tests/: distribution.py  test_adapter.py  test_autocorr.py  test_backend.py  test_dual_averaging.py  test_leapfrog.py  test_log_prob_validation.py  test_nuts.py  test_nuts_bits.py  test_proposal.py
src/hemcee/tests/affine_invariance/: test_leapfrog.py  test_proposal_hamiltonian.py  test_proposal_nuts.py  test_proposal_vanilla.py  tools.py
src/hemcee/tests/functional/: high_dimensional_gaussian.py
tests/: run_tests.py  test_affine_invariance.py  test_docstrings.py  test_dual_averaging.py  test_leapfrog.py  test_moves.py  test_proposal.py  test_sampler.py
