[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hemcee"
version = "0.1.0"
description = "Affine invariant hamiltonian samplers"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name="Your Name", email="you@example.com" }
]
requires-python = ">=3.9"
dependencies = [
    "jax",
]

[project.urls]
Homepage = "https://github.com/clarkmiyamoto/hemcee"
