[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "h-emcee"
version = "0.1.0"
description = "Affine-invariant Hamiltonian samplers"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
    { name = "Clark Miyamoto" },
    { name = "Yifan Chen" }
]
requires-python = ">=3.9"
dependencies = [
    "jax>=0.4.20",
    "tqdm",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/clarkmiyamoto/hemcee"
Repository = "https://github.com/clarkmiyamoto/hemcee"
Issues = "https://github.com/clarkmiyamoto/hemcee/issues"

# --- Dev extras (install with: pip install -e .[dev]) ---
[project.optional-dependencies]
dev = [
    # testing
    "pytest>=7",
    "pytest-cov",

    # formatting
    "pydocstyle",
    "black>=24.0",
]

# --- Tell setuptools about src/ layout ---
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["hemcee*"]

# If you ship non-Python data files inside hemcee/, uncomment:
# [tool.setuptools.package-data]
# hemcee = ["**/*"]

# --- Lint config ---
[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
select = ["E", "F", "W", "D"]
ignore = [
  "D100","D101","D102","D103","D104","D105","D106","D107",
]
per-file-ignores = [
  "tests/*:D100,D101,D102,D103,D104,D105,D106,D107",
]

[tool.darglint]
docstring_style = "google"
strictness = "short"

# --- Pytest config ---
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]

# --- Coverage config ---
[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.coverage.paths]
source = ["src", "*/site-packages"]